--- a/style/style.css
+++ b/style/style.css
@@ -63,3 +63,13 @@ h5{
 #idSubtitulo{
     color: #081C15;
 }
+.main-horse-container{
+    background-color: rgba(8, 129, 89, 0.781);
+    height: 50px;
+    width: 1000px;
+    margin: 1% 0 5% 10%;
+    border-radius: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
